--- a/style.css
+++ b/style.css
@@ -1,2 +1,48 @@
+h1,
+h2,
+h3,
+h4,
+p,
+li {
+  font-family: sans-serif;
+}
+
 h1 {
+  font-size: 26px;
+  font-style: italic;
+  text-transform: uppercase;
+}
+h2 {
+  font-size: 40px;
+}
+h3 {
+  font-size: 30px;
+}
+h4 {
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+p {
+  font-size: 22;
+  line-height: 1.5;
+}
+li {
+  font-size: 20;
+}
+/* footer p {
+  font-size: 16px;
+} */
+#author {
+  font-style: italic;
+}
+#copyright {
+  font-size: 16px;
+}
+.related-author {
+  font-weight: bold;
+  font-size: 18px;
+}
+.related {
+  list-style: none;
 }
