--- a/style.css
+++ b/style.css
@@ -5,21 +5,26 @@ h4,
 p,
 li {
   font-family: sans-serif;
+  color: rgb(51, 51, 51);
 }
-
+h1,
+h2,
+h3 {
+  color: #cd2353;
+}
 h1 {
-  font-size: 26px;
+  font-size: 40px;
   font-style: italic;
   text-transform: uppercase;
 }
 h2 {
-  font-size: 40px;
-}
-h3 {
   font-size: 30px;
 }
-h4 {
+h3 {
   font-size: 20px;
+}
+h4 {
+  font-size: 15px;
   text-align: center;
   text-transform: uppercase;
 }
@@ -45,4 +50,12 @@ li {
 }
 .related {
   list-style: none;
+}
+.main-header {
+  background-color: #f7f7f7;
+}
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #cd2353;
+  border-bottom: 5px solid #cd2353;
 }
