--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  position: relative;
+}
 h1,
 h2,
 h3,
@@ -110,4 +112,18 @@ nav a {
   display: inline-block;
   margin: 20px;
   padding-right: 0;
+}
+button {
+  font-size: 20px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  background-color: #d1d1d1;
+  color: #ff0000;
+}
+button:hover {
+  background-color: #ff0000;
+  color: #d1d1d1;
 }
