--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ h1 {
   text-transform: uppercase;
 }
 h2 {
-  font-size: 30px;
+  font-size: 31px;
   margin-bottom: 25px;
+  text-decoration: underline;
 }
 h3 {
   font-size: 20px;
